tests/snapshots/run_wpt_conformance__litert_gemm_two_float32_2D_tensors_options_bTranspose_being_explicit_false.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 57
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gemm.https.any.js",
    "gemm two float32 2D tensors options.bTranspose being explicit false",
    "litert",
    "PASS",
)
