tests/snapshots/run_wpt_conformance__litert_global_averagePool2d_float16_4D_tensor_all_positive_options_windowDimensions.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
averagePool2d.https.any.js global averagePool2d float16 4D tensor all positive options.windowDimensions, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    averagePool2dInput: f16[1, 2, 5, 5];
  }

  nodes {
    [averagePool2dOutput] = averagePool2d(averagePool2dInput, dilations=[], label="", layout="", outputShapeRounding="", outputSizes=null, padding=[], strides=[], windowDimensions=[5, 5]);
  }

  outputs { averagePool2dOutput; }
}
